[package]
name = "img_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
mongodb = {version="2.3.0",features = ["tokio-sync"]}
rayon = "1.5.3"
reqwest =  { version = "0.11.11", features = ["blocking"] }
scraper = "0.13.0"
serde = "1.0.145"
